scripts/nullaway/wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8.txt
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/example/ReadSKOSExample.java:73: error: [NullAway] dereferenced expression anno.getAnnotationValueAsConstant() is @Nullable
                            if (anno.getAnnotationValueAsConstant().isTyped()) {
                                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/example/ReadSKOSExample.java:85: error: [NullAway] dereferenced expression anno.getAnnotationValue() is @Nullable
                            System.err.println(anno.getAnnotationValue().getURI().toString());
                                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/example/Example1.java:96: error: [NullAway] dereferenced expression literal is @Nullable
                        value = literal.getLiteral();
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/example/Example1.java:107: error: [NullAway] dereferenced expression entity is @Nullable
                        value = entity.getURI().getFragment();
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/uk/ac/manchester/cs/skos/SKOSDatasetImpl.java:138: error: [NullAway] dereferenced expression SKOSEntity.get(ass.getSKOSObject().getURI()) is @Nullable
                concepts.add(SKOSEntity.get(ass.getSKOSObject().getURI()).asSKOSConcept());
                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/uk/ac/manchester/cs/skos/SKOSDatasetImpl.java:195: error: [NullAway] dereferenced expression ind is @Nullable
        for (OWLClassExpression desc : ind.getTypes(owlOntology)) {
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/uk/ac/manchester/cs/skos/SKOSDatasetImpl.java:216: error: [NullAway] dereferenced expression skos2owlConverter.getAsOWLIndiviudal(skosEntity) is @Nullable
        for (OWLAxiom ax : owlOntology.getReferencingAxioms(skos2owlConverter.getAsOWLIndiviudal(skosEntity).asOWLNamedIndividual())) {
                                                                                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/uk/ac/manchester/cs/skos/SKOSDatasetImpl.java:294: error: [NullAway] dereferenced expression skos2owlConverter.getAsOWLIndiviudal(skosEntity) is @Nullable
        for (OWLAxiom ax : owlOntology.getReferencingAxioms(skos2owlConverter.getAsOWLIndiviudal(skosEntity).asOWLNamedIndividual())) {
                                                                                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/uk/ac/manchester/cs/skos/SKOSDatasetImpl.java:368: error: [NullAway] dereferenced expression ind is @Nullable
        for (OWLAnnotation anno : ind.asOWLNamedIndividual().getAnnotations(owlOntology)) {
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/org/semanticweb/skos/SKOSChangeException.java:51: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.change = change;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/uk/ac/manchester/cs/skos/SKOSDataFactoryImpl.java:162: error: [NullAway] dereferenced expression entity is @Nullable
        SKOSResource resource = new SKOSResourceImpl(this, entity.getURI());
                                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/uk/ac/manchester/cs/skos/properties/SKOSAnnotationImpl.java:56: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.entity = null;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/uk/ac/manchester/cs/skos/properties/SKOSAnnotationImpl.java:72: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.literal = null;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/uk/ac/manchester/cs/skos/SKOSAnnotationAssertionImpl.java:50: error: [NullAway] dereferenced expression converter.getAsOWLIndiviudal(subject) is @Nullable
        ax = factory.getOWLAnnotationAssertionAxiom(converter.getAsOWLIndiviudal(subject).getIRI(), converter.getAsOWLAnnotation(annotation));
                                                                                         ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url28f181064f_simonjupp_java_skos_api_tgz-pJ8-example_CreateSKOSExampleJ8/src/uk/ac/manchester/cs/skos/SKOSTypedLiteralImpl.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
14 errors
